Final logic fix for all weapons 1.21.4